--- a/donguk/mypage/templates/profile.html
+++ b/donguk/mypage/templates/profile.html
@@ -65,6 +65,6 @@
             </div>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='js/chatbot.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
