--- a/hojun/chatbot/templates/chatbot.html
+++ b/hojun/chatbot/templates/chatbot.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    {% extends 'base.html' %}
+    {% block content %}
     <!-- 메인 컨테이너 -->
     <div class="chatbot-container">
         <!-- 왼쪽 채팅 내역 -->
@@ -54,5 +56,6 @@
     </div>
 
     <script src="{{ url_for('chatbot.static', filename='js/chatbot.js') }}"></script>
+    {% endblock %}
 </body>
 </html>
