--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
             <div class="nav-container">
                 <div class="logo">데테크</div>
                 <ul class="nav-links">
-                    <li><a href="#">데이터 찾기</a></li>
-                    <li><a href="#">산다</a></li>
-                    <li><a href="#">팔다</a></li>
+                    <li><a href="#">데이터 카테고리</a></li>
+                    <li><a href="#">데이터 구매</a></li>
+                    <li><a href="#">데이터 판매</a></li>
                     <li><a href="#">무료 데이터</a></li>
                 </ul>
                 <div class="nav-buttons">
